--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-03  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (GetRcLines): Fix bug that prevented the oldrc.log file
+	from being read if rc.log was missing or empty.
+
 2009-06-26  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (SearchTitleAndBody): Unquote the search string.
