--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-19  Alex Schroeder  <alex@gnu.org>
+
+	* modules/flashbox.pl (FlashboxRule): Fixed YouTube regular
+	expression as suggested by sjm.
+
 2009-07-03  Alex Schroeder  <alex@gnu.org>
 
 	* modules/usemod.pl (UsemodRule): Use $UsemodHtmlRegExp instead of
