--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-08-04  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (DoPost): Apparently we cannot count on <$file> to
+	always work within the eval, so we use a local variable. (Showed
+	up on a site.)
+
 2009-07-29  Alex Schroeder  <alex@gnu.org>
 
 	* modules/flashbox.pl (FlashboxRule): Made YouTube regular
