--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,10 @@
 	* wiki.pl (ApplyRules): Make sure named entity Auml is rendered
 	just as auml is.
 
+2009-06-24  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (GetFeeds): Fix link to follow-up RSS feed.
+
 2009-06-22  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (ApplyRules): No longer localize $OpenPageName and %Page
