*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 2009-08-19  Alex Schroeder  <alex@gnu.org>
 
-	* wiki.pl (SearchRegexp): Keep the test for invalid regular
-	expressions but do not return it as a result because the value
-	cannot be passed to grep.
+	* wiki.pl (SearchRegexp, SearchString): Remove the test for
+	invalid regular expressions.
+	(DoSearch): Report invalid regular expressions as an error.
 
 2009-08-16  Alex Schroeder  <alex@gnu.org>
 
