--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-12-06  Alex Schroeder  <alex@gnu.org>
+
+	* modules/anchors.pl (AnchorsRule): Use an empty string instead of
+	a single space.
+
 2009-12-05  Alex Schroeder  <alex@gnu.org>
 
 	* modules/anchors.pl (AnchorsRule): Used a space for anchor
