--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-12-11  Alex Schroeder  <alex@gnu.org>
+
+	* modules/faq.pl (FaqHeadings): Skip {{{ }}} paragraphs as
+	introduced by creole.pl.
+
 2009-12-06  Alex Schroeder  <alex@gnu.org>
 
 	* modules/anchors.pl (AnchorsRule): Use an empty string instead of
