--- a/ChangeLog
+++ b/ChangeLog
@@ -1,22 +1,12 @@
-2009-12-11  Alex Schroeder  <alex@gnu.org>
+2009-12-28  Alex Schroeder  <alex@gnu.org>
 
-	* modules/faq.pl (FaqHeadings): Skip {{{ }}} paragraphs as
-	introduced by creole.pl.
-
-2009-12-06  Alex Schroeder  <alex@gnu.org>
-
-	* modules/anchors.pl (AnchorsRule): Use an empty string instead of
-	a single space.
-
-2009-12-05  Alex Schroeder  <alex@gnu.org>
-
-	* modules/anchors.pl (AnchorsRule): Used a space for anchor
-	definition in order to avoid an empty a element.
-
-2009-11-07  Alex Schroeder  <alex@gnu.org>
-
-	* modules/markup.pl (%MarkupSingles): The right arrow is followed
-	by a non-breaking space. Added more arrows.
+	* rc2mail.pl (get_timeframe): Replaced by get_timestamp and
+	update_timestamp.
+	(get_timestamp): New. Return from=x or days=1.
+	(update_timestamp): New. Update timestamp or create timestamp file
+	if necessary.
+	(get_rss): Call the two new functions.
+	(send_files): Always print a message when mail has been sent.
 
 2009-10-14  Alex Schroeder  <alex@gnu.org>
 
