--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-01-28  Alex Schroeder  <alex@gnu.org>
+
+        * modules/bbcode.pl (bbCodeRule): s and strike.
+
 2010-01-21  Alex Schroeder  <alex@gnu.org>
 
 	* modules/bbcode.pl (bbCodeRule): Support bullet lists, but no
