--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-21  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (StripRollbacks): Strip remaining chunk of the log if we
+	found an unfinished [[rollback]] section.
+
 2010-03-31  Alex Schroeder  <aschroeder@thinkmo.de>
 
 	* modules/tags.pl (TagsRule): Add alt attribute.
