--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-07  Alex Schroeder  <alex@gnu.org>
+
+	* modules/namespaces.pl (DoNamespacesList): Fix the links to
+	namespaces.
+
 2010-04-21  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (StripRollbacks): Strip remaining chunk of the log if we
