--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-17  Alex Schroeder  <alex@gnu.org>
+
+	* modules/load-lang.pl: Prepend instead of append to
+	MyInitVariables to get rid of a conflict with gotobar.pl.
+
 2010-05-14  Alex Schroeder  <alex@gnu.org>
 
 	* modules/svg-edit.pl (DoSvg): Make the sidebar invisible, if
