*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,11 +5,13 @@
 
 2010-05-14  Alex Schroeder  <alex@gnu.org>
 
-	* modules/svg-edit.pl (DoSvg): Make the sidebar invisible, if
+	* modules/svg-edit.pl (NewSvgGetDownloadLink): Show older
+	revisions, too. Work when included in [[image:foo]] links.
+	(DoSvg): Enable translation of the prompt. Bypass Questionasker by
+	default.
+	(DoSvg, NewSvgGetEditForm): Allow editing older revisions.
+	(DoSvg): Make the sidebar invisible, if
 	necessary.
-	(NewSvgGetDownloadLink): Show older revisions, too. Work when
-	included in [[image:foo]] links.
-	(DoSvg): Enable translation of the prompt.
 
 2010-05-13  Alex Schroeder  <alex@gnu.org>
 
