--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-21  Alex Schroeder  <alex@gnu.org>
+
+	* modules/bbcode.pl (bbCodeRule): Fix [/code] handling.
+
 2010-09-10  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (RequestLockDir): Don't enter an infinite loop of trying
