--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-10  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (GetSummary): Fix remaining closing square bracket.
+
 2010-09-21  Alex Schroeder  <alex@gnu.org>
 
 	* modules/bbcode.pl (bbCodeRule): Fix [/code] handling.
