--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2010-10-10  Alex Schroeder  <alex@gnu.org>
 
-	* modules/gravatar.pl (AddGravatar): New; strip gravatar link from
-	comment summary.
+	* modules/gravatar.pl (GravatarNewGetSummary): New; strip gravatar
+	link from comment summary.
 
 	* wiki.pl (GetSummary): Fix remaining closing square bracket.
 
