*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-24  Alex Schroeder  <alex@gnu.org>
+
+	* modules/referrer-tracking.pl (GetReferers): Fix split.
+
 2010-10-23  Alex Schroeder  <alex@gnu.org>
 
 	* modules/referrer-tracking.pl: Updated license to GPL 3.
