--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-04  Alex Schroeder  <alex@gnu.org>
+
+	* modules/journal-rss.pl (JournalRssGetRcLines): Make sure minor
+	changes and empty pages don't show up.
+
 2010-10-27  Alex Schroeder  <alex@gnu.org>
 
 	* modules/referrer-tracking.pl (UrlToTitle): Add charset arg.
