--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-17  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl (CreoleRule): Resolved a lot more quoting
+	issues using the ampersand.t tests.
+
 2011-01-16  Alex Schroeder  <alex@gnu.org>
 
 	* modules/creole.pl (CreoleRule): Use FreeToNormal on the first
