--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-29  Alex Schroeder  <alex@gnu.org>
+
+	* modules/near-links.pl (ListNearPages): Skip pages that exist
+	locally for the index action.
+
 2011-01-19  Alex Schroeder  <alex@gnu.org>
 
 	* modules/usemod.pl ($UseModExtraSpaceRequired): New option.
