--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-02-05  Alex Schroeder  <alex@gnu.org>
+
+	* modules/translations/french-utf8.pl: Best effort translation for
+	campaignwiki.org.
+
 2011-01-29  Alex Schroeder  <alex@gnu.org>
 
 	* modules/near-links.pl (ListNearPages): Skip pages that exist
