*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,12 @@
 	* modules/gravatar.pl (AddGravatar): Prefix "http://" to homepage
 	if user did not provide it.
 
+2011-02-24  Alex Schroeder  <alex@gnu.org>
+
+	* modules/referrer-tracking.pl (ExpireReferers, UrlToTitle)
+	(GetReferers, PageContentToTitle, UpdateReferers): Get rid of
+	charset handling.
+
 2011-02-12  Alex Schroeder  <alex@gnu.org>
 
 	* modules/gravatar.pl (GravatarRule): Accept URL in addition to
