*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2011-07-06  Alex Schroeder  <alex@gnu.org>
 
+	* modules/image.pl (ImageSupportRule): Don't URL encode
+	$ImageUrlPath – specially bad if it ends up containing "http:" and
+	the like.
+
 	* wiki.pl (GetRcRss): Add Dublin Core (dc) and Atom (atom)
 	namespace. Switch cc prefix to http://web.resource.org/cc/. Switch
 	channel link from RecentChanges to the HomePage. Fix image title
