--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-10-12  Alex Schroeder  <alex@gnu.org>
+
+	* modules/monitor.pl (MonitorSend): Change from User to From
+	address.
+
 2011-07-06  Alex Schroeder  <alex@gnu.org>
 
 	* modules/dynamic-comments.pl (SafeId): New.
