*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2011-10-14  Alex Schroeder  <alex@gnu.org>
 
+	* modules/static-copy.pl (StaticFileName, StaticWriteFile): Handle
+	encoded files, eg. gzip.
+
 	* wiki.pl (TextIsFile): Fix regular expression.
 
 2011-10-13  Alex Schroeder  <aschroeder@thinkmo.de>
