--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2011-12-01  Alex Schroeder  <alex@gnu.org>
 
+	* contrib/campaignwiki/submit.pl (post_addition): Add support for
+	honeypot.
+
 	* contrib/campaignwiki/add-link.pl: use utf8.
 	(toc): labels and values are different, now.
 	(check_url): this simplifies stuff, here. Also fix some name
