--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-12-04  Alex Schroeder  <alex@gnu.org>
+
+	* contrib/campaignwiki/submit.pl (check_url): Use GetFormStart.
+	(main): Show the default screen if $HoneyPotOk is not provided
+	because the bookmarklet doesn't provide it.
+
 2011-12-01  Alex Schroeder  <alex@gnu.org>
 
 	* contrib/campaignwiki/submit.pl (post_addition): Add support for
