--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-31  Alex Schroeder  <aschroeder@thinkmo.de>
+
+	* modules/webapp.pl (InitWebApp): Fix quoting issues.
+
 2012-01-17  Alex Schroeder  <alex@gnu.org>
 
 	* modules/logout.pl (GetFooterLinksLogout): Add extra space as
