--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-06  Alex Schroeder  <aschroeder@thinkmo.de>
+
+	* wiki.pl (ApplyRules): Fix regexp bug reported by Mark Zimmermann
+	and Ingo Belka.
+
 2012-01-31  Alex Schroeder  <aschroeder@thinkmo.de>
 
 	* modules/webapp.pl (InitWebApp): Fix quoting issues.
