--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-03-08  Alex Schroeder  <aschroeder@thinkmo.de>
+
+	* wiki.pl (PrintAllPages): Skip redirected pages.
+
 2012-03-06  Alex Schroeder  <aschroeder@thinkmo.de>
 
 	* wiki.pl (ApplyRules): Fix regexp bug reported by Mark Zimmermann
