--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-20  Alex Schroeder  <alex@gnu.org>
+
+	* modules/namespaces.pl (NewNamespaceBrowsePage): Allow redirection to namespaces.
+	(NamespacesNewGetId): Allow for the provision of the ns parameter.
+
 2012-03-17  Alex Schroeder  <alex@gnu.org>
 
 	* modules/namespaces.pl (NamespacesNewGetId): Fix the special case
